[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-edit-rate"
version = "0.3.0"
dependencies = [
    "sacrebleu==2.5.1",
    "jiwer==4.0.0",
    "numpy",
    "dataclasses;python_version<'3.7'",
]
requires-python = ">= 3.6"
authors = [
    {name = "Patrick Wilken", email = "pwilken@apptek.com"},
]
maintainers = [
    {name = "Patrick Wilken", email = "pwilken@apptek.com"},
]
description = "SubER: a metric for automatic evaluation of subtitle quality"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["subtitling", "subtitles", "captions", "metric", "evaluation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/apptek/SubER"
Issues = "https://github.com/apptek/SubER/issues"
Source = "https://github.com/apptek/SubER"

[tool.setuptools.packages.find]
include = ["suber*"]

[project.scripts]
suber = "suber.__main__:main"
